fix: swagger update
